--- a/_config.yml
+++ b/_config.yml
@@ -26,13 +26,11 @@ description: >- # this means to ignore newlines until "baseurl:"
   Here you will find my CV and also what I have been working on.
   Enjoy.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://andrbmartins.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: andrbmartins
 
 # Build settings
 theme: minima
-plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
